<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.11</version>
		<relativePath/>
	</parent>

	<groupId>com.zxf</groupId>
	<artifactId>web-security</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<java.version>21</java.version>
	</properties>

	<modules>
		<module>web-server-tester</module>
        <module>web-server-cors</module>
		<module>web-server-csrf</module>
		<module>web-server-security</module>
		<module>web-server-firewall</module>
		<module>web-server-fileupload</module>
		<module>web-server-sql-injection</module>
    </modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.mysql</groupId>
				<artifactId>mysql-connector-j</artifactId>
				<version>8.0.33</version>
			</dependency>
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-core</artifactId>
				<version>10.1.0</version>
			</dependency>
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-mysql</artifactId>
				<version>10.1.0</version>
			</dependency>
			<dependency>
				<groupId>com.aspose</groupId>
				<artifactId>aspose-words</artifactId>
				<version>22.11</version>
				<classifier>jdk17</classifier>
			</dependency>
			<dependency>
				<groupId>com.aspose</groupId>
				<artifactId>aspose-words</artifactId>
				<version>22.11</version>
				<classifier>javadoc</classifier>
			</dependency>
			<dependency>
				<groupId>com.aspose</groupId>
				<artifactId>aspose-cells</artifactId>
				<version>22.11</version>
			</dependency>
			<dependency>
				<groupId>com.aspose</groupId>
				<artifactId>aspose-cells</artifactId>
				<version>22.11</version>
				<classifier>javadoc</classifier>
			</dependency>
			<dependency>
				<groupId>com.aspose</groupId>
				<artifactId>aspose-slides</artifactId>
				<version>22.11</version>
				<classifier>jdk16</classifier>
			</dependency>
			<dependency>
				<groupId>com.aspose</groupId>
				<artifactId>aspose-slides</artifactId>
				<version>22.11</version>
				<classifier>javadoc</classifier>
			</dependency>
			<dependency>
				<groupId>com.itextpdf</groupId>
				<artifactId>itextpdf</artifactId>
				<version>5.5.6</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.4</version>
			</dependency>
			<dependency>
				<groupId>com.opencsv</groupId>
				<artifactId>opencsv</artifactId>
				<version>5.4</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>AsposeJavaAPI</id>
			<name>Aspose Java API</name>
			<url>https://releases.aspose.com/java/repo/</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.openrewrite.maven</groupId>
				<artifactId>rewrite-maven-plugin</artifactId>
				<version>6.30.0</version>
				<configuration>
					<activeRecipes>
						<recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_5</recipe>
						<recipe>org.openrewrite.java.testing.junit.JupiterBestPractices</recipe>
						<recipe>org.openrewrite.java.testing.junit5.JUnit5BestPractices</recipe>
						<recipe>org.openrewrite.java.testing.mockito.MockitoBestPractices</recipe>
						<recipe>org.openrewrite.java.migrate.UpgradeToJava21</recipe>
						<recipe>org.openrewrite.java.jackson.JacksonBestPractices</recipe>
<!--						<recipe>org.openrewrite.java.logging.slf4j.Slf4jBestPractices</recipe>-->
						<recipe>org.openrewrite.java.security.JavaSecurityBestPractices</recipe>
					</activeRecipes>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-spring</artifactId>
						<version>6.25.1</version>
					</dependency>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-testing-frameworks</artifactId>
						<version>3.28.0</version>
					</dependency>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-jackson</artifactId>
						<version>1.17.1</version>
					</dependency>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-logging-frameworks</artifactId>
						<version>3.24.0</version>
					</dependency>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-java-security</artifactId>
						<version>3.26.2</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>
